added a new route in rating service to return a list of ratings, and fetched it using restTemplate in catalog service